add padding to whole app

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
 
     <!-- ui template -->
-    <div id="app" class="columns">
+    <div id="app" class="columns p-6">
 
         <aside class="column is-one-fifth menu">
             <h1 class="title">Round {{ round }}</h1>
