--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
                     <div class="column">
                         <div class="panel" style="height: 40ex;">
                             <div class="panel-heading">{{ team1.word1.real }}</div>
-                            <p class="panel-block" v-for="code in team1.word1.codes">{{ code }}</p>
+                            <p class="panel-block" v-for="code in team1.word1.hints">{{ code }}</p>
                         </div>
                     </div>
                     <div class="column">
                         <div class="panel" style="height: 40ex;">
                             <div class="panel-heading">{{ team1.word2.real }}</div>
-                            <p class="panel-block" v-for="code in team1.word2.codes">{{ code }}</p>
+                            <p class="panel-block" v-for="code in team1.word2.hints">{{ code }}</p>
                         </div>
                     </div>
                     <div class="column">
                         <div class="panel" style="height: 40ex;">
                             <div class="panel-heading">{{ team1.word3.real }}</div>
-                            <p class="panel-block" v-for="code in team1.word3.codes">{{ code }}</p>
+                            <p class="panel-block" v-for="code in team1.word3.hints">{{ code }}</p>
                         </div>
                     </div>
                     <div class="column">
                         <div class="panel" style="height: 40ex;">
                             <div class="panel-heading">{{ team1.word4.real }}</div>
-                            <p class="panel-block" v-for="code in team1.word4.codes">{{ code }}</p>
+                            <p class="panel-block" v-for="code in team1.word4.hints">{{ code }}</p>
                         </div>
                     </div>
                 </main>
                 <footer class="columns footer">
                     <div class="column has-text-centered">
-                        <p>Wrong codes of the own team:</p><span id="wrong-self-1">X</span><span
+                        <p>Wrong guesses of the own team:</p><span id="wrong-self-1">X</span><span
                             id="wrong-self-2">O</span>
                     </div>
                     <div class="column has-text-centered">
-                        <p>Wrong codes of the enemy team:</p><span id="correct-others-1">O</span><span
+                        <p>Correct guesses of the enemy team:</p><span id="correct-others-1">O</span><span
                             id="correct-others-2">O</span>
                     </div>
                 </footer>
@@ -115,7 +115,7 @@
                         ],
                         word1: {
                             real: "Word 1",
-                            codes: [
+                            hints: [
                                 "Code 1",
                                 "Code 2",
                                 "Code 3"
@@ -123,14 +123,14 @@
                         },
                         word2: {
                             real: "Word 2",
-                            codes: [
+                            hints: [
                                 "Code 1",
                                 "Code 2"
                             ]
                         },
                         word3: {
                             real: "Word 3",
-                            codes: [
+                            hints: [
                                 "Code 1",
                                 "Code 2",
                                 "Code 3"
@@ -138,7 +138,7 @@
                         },
                         word4: {
                             real: "Word 4",
-                            codes: [
+                            hints: [
                                 "Code 1"
                             ]
                         }
@@ -149,19 +149,19 @@
                         ],
                         word1: {
                             real: "e",
-                            codes: []
+                            hints: []
                         },
                         word2: {
                             real: "f",
-                            codes: []
+                            hints: []
                         },
                         word3: {
                             real: "g",
-                            codes: []
+                            hints: []
                         },
                         word4: {
                             real: "h",
-                            codes: []
+                            hints: []
                         }
                     }
                 }
