Button colour changed.

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         }
 
         /* Button */
-        .button-test {
+        .button-submit {
             display: inline-block;
             min-width: 50%;
             padding-top: 0.25em;
             padding-bottom: 0.25em;
             border: none;
             border-radius: 5px;
-            background-color: #4CAF50;
-            color: white;
+            background-color: #93bfcf;
+            color: #FFFFFF;
             text-align: center;
             font-size: 1.25em;
             font-weight: 600;
             cursor: pointer;    /* Show hand icon while hovering over button */
         }
-        .button-test:hover {
-            box-shadow: 5px 5px 50px grey;    /* 1: Horizontal offset, 2: Vertical offset, 3: Blur radius, 4: Colour */
-            background-color: yellow;
-            color: black; 
-            transition: 0.5s;
+        .button-submit:hover {
+            box-shadow: 5px 5px 10px grey;    /* 1: Horizontal offset, 2: Vertical offset, 3: Blur radius, 4: Colour */
+            background-color: #6096b4;
+            color: #FFFFFF; 
+            transition: 0s;
         }
 
         .round-counter {
@@ -123,7 +123,7 @@
                 <p class="panel-block">Hint 2</p>
                 <p class="panel-block">Hint 3</p>
             </div>
-            <input type="button" class="button-test" value="Submit">
+            <input type="button" class="button-submit" value="Submit">
         </section>
     </div>
 
