Code set to dummy number.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <!-- Right section containing the current code and its hints -->
         <section class="column is-one-fifth">
             <div class="panel">
-                <div class="panel-heading">{{ team1.word1.real }}</div>
+                <div class="panel-heading">123</div>
                 <p class="panel-block">Hint 1</p>
                 <p class="panel-block">Hint 2</p>
                 <p class="panel-block">Hint 3</p>
