--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
             display: inline-block;
             min-width: 50%;
             padding: 0.25em;
-            margin-left: 0px;
-            margin-top: 5px;
-            margin-right: 5px;
-            margin-bottom: 5px;
+            margin: 5px;
             border: none;
             border-radius: 5px;
             background-color: #93bfcf;
@@ -76,10 +73,7 @@
             box-sizing: border-box;
             width: 3em;
             padding: 10px;
-            margin-left: 0px;
-            margin-top: 5px;
-            margin-right: 5px;
-            margin-bottom: 5px;
+            margin: 5px;
             border: 2px solid #93bfcf;
             border-radius: 5px;
             text-align: center;
@@ -94,11 +88,9 @@
         input[type=text] {
             /* Padding and border are within the size */
             box-sizing: border-box;
+            width: 10em;
             padding: 10px;
-            margin-left: 0px;
-            margin-top: 5px;
-            margin-right: 5px;
-            margin-bottom: 5px;
+            margin: 5px;
             border: 2px solid #93bfcf;
             border-radius: 5px;
             text-align: left;
